<resources>
    <string name="app_name">CobaNavigasi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Questions</string>
    <string name="menu_diary">My diary</string>
    <string name="menu_statistic">My Statistic</string>
    <string name="menu_wordcloud">Word Cloud</string>
    <string name="menu_themes">Themes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_premium">Premium</string>
    <string name="menu_share">Share</string>
    <string name="menu_community">Community</string>

    <string name="question_of_the_day">Question of the day</string>
    <string name="note_add">Add note</string>
    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">HOME KE DUA</string>
    <string name="questions">Questions</string>
    <string name="title_activity_calendar">Calendar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_note">Add note</string>
    <string name="timeline">Timeline</string>
    <string name="reflexio_default">REFLEXIO DEFAULT</string>
    <string name="night_sky">NIGHT SKY</string>
    <string name="pacific_forest">PACIFIC FOREST</string>
    <string name="choco_autumn">CHOCO AUTUMN</string>
    <string name="reminders">  REMINDERS</string>
    <string name="remindertime">  REMINDER TIME</string>
    <string name="backup">  BACKUP</string>
    <string name="passcode">  PASSCODE</string>
    <string name="privacy_polici">  PRIVACY POLICI</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="add">+</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
