<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="Questions" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/icon_mydiary"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/icon_statistic"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_wordcloud"
            android:icon="@drawable/icon_wordcloud"
            android:title="@string/menu_wordcloud" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/icon_theme"
            android:title="@string/menu_themes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_setting"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/icon_premium"
            android:title="Premium" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/icon_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/icon_community"
            android:title="@string/menu_community" />
    </group>
</menu>
