<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrmydiary"
    tools:context=".SettingsFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSetting1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="20dp"
        android:text="@string/reminders"
        android:textAlignment="textStart"
        android:drawableLeft="@drawable/icsetting1"
        android:paddingStart="5dp"
        android:paddingBottom="20dp"
        android:textSize="18sp"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/btnSetting2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/remindertime"
        android:textAlignment="textStart"
        android:drawableLeft="@drawable/icsetting2"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSetting3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/backup"
        android:drawableLeft="@drawable/icsetting3"
        android:textSize="18sp"
        android:textAlignment="textStart"/>

    <Button
        android:id="@+id/btnSetting4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/icsetting4"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/passcode"
        android:textSize="18sp"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/btnSetting5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/icsetting5"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/privacy_polici"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:background="@android:color/transparent"/>


</LinearLayout>