<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrthemes"
    tools:context=".ThemesFragment">

    <Button
        android:id="@+id/buttonSet1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/reflexio_default"
        android:background="@android:color/transparent"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"
        android:paddingStart="15dp" />

    <Button
        android:id="@+id/buttonSet2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/night_sky"
        android:background="@android:color/transparent"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        android:paddingStart="15dp"
        />

    <Button
        android:id="@+id/buttonSet3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/pacific_forest"
        android:background="@android:color/transparent"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        android:paddingStart="15dp"
        />

    <Button
        android:id="@+id/buttonSet4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/choco_autumn"
        android:background="@android:color/transparent"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"
        android:paddingStart="15dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>